[gd_scene load_steps=16 format=3 uid="uid://beuvtasx05hqt"]

[ext_resource type="PackedScene" path="res://addons/platform_gui/event_bus/PlatformGUIEventBus.tscn" id="1"]
[ext_resource type="PackedScene" path="res://addons/platform_gui/controllers/RNGProcessorController.tscn" id="2"]
[ext_resource type="Script" uid="uid://bqt7t8eejtpla" path="res://addons/platform_gui/services/strategy_metadata.gd" id="3"]
[ext_resource type="PackedScene" path="res://addons/platform_gui/components/DebugToolbar.tscn" id="4"]
[ext_resource type="PackedScene" path="res://addons/platform_gui/panels/seeds/SeedsDashboardPanel.tscn" id="5"]
[ext_resource type="PackedScene" path="res://addons/platform_gui/panels/logs/DebugLogPanel.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://udu4yfu0fxln" path="res://addons/platform_gui/panels/datasets/DatasetInspectorPanel.tscn" id="7"]
[ext_resource type="PackedScene" path="res://addons/platform_gui/panels/qa/QAPanel.tscn" id="8"]
[ext_resource type="PackedScene" path="res://addons/platform_gui/workspaces/formulas/FormulasWorkspace.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://ddp0m77kvaalr" path="res://addons/platform_gui/panels/wordlist/WordlistPanel.tscn" id="10"]
[ext_resource type="PackedScene" uid="uid://2fmw61woj2ln" path="res://addons/platform_gui/panels/syllable_chain/SyllableChainPanel.tscn" id="11"]
[ext_resource type="PackedScene" uid="uid://dwy7715egg5dj" path="res://addons/platform_gui/panels/template/TemplatePanel.tscn" id="12"]
[ext_resource type="PackedScene" uid="uid://markovpanel" path="res://addons/platform_gui/panels/markov/MarkovPanel.tscn" id="13"]
[ext_resource type="PackedScene" uid="uid://tp3q2cn3ealb" path="res://addons/platform_gui/panels/hybrid/HybridPipelinePanel.tscn" id="14"]
[ext_resource type="Script" uid="uid://nq4m2cgyfn1v" path="res://Main_Interface.gd" id="16"]

[node name="Main_Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("16")

[node name="EventBus" parent="." instance=ExtResource("1")]

[node name="ProcessorController" parent="." instance=ExtResource("2")]

[node name="StrategyMetadataService" type="Node" parent="."]
script = ExtResource("3")

[node name="MainScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MainLayout" type="VBoxContainer" parent="MainScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="DebugToolbar" parent="MainScrollContainer/MainLayout" instance=ExtResource("4")]
unique_name_in_owner = true

[node name="MainTabs" type="TabContainer" parent="MainScrollContainer/MainLayout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0
mouse_filter = 1

[node name="Generators" type="VBoxContainer" parent="MainScrollContainer/MainLayout/MainTabs"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_tab_index = 0

[node name="GeneratorPanels" type="TabContainer" parent="MainScrollContainer/MainLayout/MainTabs/Generators"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0
mouse_filter = 1

[node name="WordlistPanel" parent="MainScrollContainer/MainLayout/MainTabs/Generators/GeneratorPanels" instance=ExtResource("10")]
unique_name_in_owner = true
layout_mode = 2
metadata/_tab_index = 0

[node name="SyllableChainPanel" parent="MainScrollContainer/MainLayout/MainTabs/Generators/GeneratorPanels" instance=ExtResource("11")]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="TemplatePanel" parent="MainScrollContainer/MainLayout/MainTabs/Generators/GeneratorPanels" instance=ExtResource("12")]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MarkovPanel" parent="MainScrollContainer/MainLayout/MainTabs/Generators/GeneratorPanels" instance=ExtResource("13")]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="HybridPipelinePanel" parent="MainScrollContainer/MainLayout/MainTabs/Generators/GeneratorPanels" instance=ExtResource("14")]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="SeedsDashboardPanel" parent="MainScrollContainer/MainLayout/MainTabs" instance=ExtResource("5")]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="DebugLogPanel" parent="MainScrollContainer/MainLayout/MainTabs" instance=ExtResource("6")]
unique_name_in_owner = true
visible = false
metadata/_tab_index = 2

[node name="DatasetInspectorPanel" parent="MainScrollContainer/MainLayout/MainTabs" instance=ExtResource("7")]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="QAPanel" parent="MainScrollContainer/MainLayout/MainTabs" instance=ExtResource("8")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
metadata/_tab_index = 4

[node name="FormulasWorkspace" parent="MainScrollContainer/MainLayout/MainTabs" instance=ExtResource("9")]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="HelpersDock" type="VBoxContainer" parent="MainScrollContainer/MainLayout/MainTabs"]
unique_name_in_owner = true
editor_description = "Placeholder dock reserved for future helper widgets. Attach new tools here to inherit middleware overrides automatically."
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_tab_index = 6
